--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <!-- <script
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLE_MAPS_API_KEY%&loading=async"
       loading="async"
       defer
-    ></script> -->
+    ></script>
     <title>React App</title>
   </head>
   <body>
